Refactor data loading for some tests